// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the filter has the correct style with no input. 1`] = `
.glamor-2,
[data-glamor-2] {
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-shrink: 0;
  margin: 8px;
  padding: 4px;
  transition: border-bottom 0.2s;
  border-bottom: solid 2px rgba(0, 0, 0, 0.19999999999999996);
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-shrink: 0;
  -webkit-transition: border-bottom 0.2s;
  -moz-transition: border-bottom 0.2s;
}

.glamor-0,
[data-glamor-0] {
  background: transparent;
  border: none;
  flex-grow: 1;
  font-size: 20px;
  height: 24px;
  outline: none;
  -webkit-flex-grow: 1;
}

.glamor-1,
[data-glamor-1] {
  background: none;
  border: none;
  height: 16px;
  width: 16px;
  cursor: default;
}

<ComponentListFilter
  onInput={[Function]}
  theme={Object {}}
>
  <glamorous(div)
    focussed={false}
    theme={Object {}}
  >
    <div
      className="glamor-2"
    >
      <glamorous(input)
        id="search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        theme={Object {}}
        value=""
      >
        <input
          className="glamor-0"
          id="search-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          value=""
        />
      </glamorous(input)>
      <glamorous(button)
        pointer={false}
      >
        <button
          className="glamor-1"
        >
          <svg
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 28.5l-8.2-8.2c3.4-5.1 2.9-12-1.6-16.4C19.7 1.3 16.3 0 13 0 9.7 0 6.3 1.3 3.8 3.8c-5.1 5.1-5.1 13.3 0 18.4C6.3 24.7 9.7 26 13 26c2.5 0 5.1-.7 7.3-2.2l8.2 8.2 3.5-3.5zM6.6 19.4C4.9 17.7 4 15.4 4 13s.9-4.7 2.6-6.4C8.3 4.9 10.6 4 13 4c2.4 0 4.7.9 6.4 2.6 3.5 3.5 3.5 9.2 0 12.7-1.7 1.7-4 2.6-6.4 2.6s-4.7-.8-6.4-2.5z"
            />
          </svg>
        </button>
      </glamorous(button)>
    </div>
  </glamorous(div)>
</ComponentListFilter>
`;

exports[`when I focus and type in the filter. the filter has the correct style when not focussed. 1`] = `
.glamor-2,
[data-glamor-2] {
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-shrink: 0;
  margin: 8px;
  padding: 4px;
  transition: border-bottom 0.2s;
  border-bottom: solid 2px rgba(0, 0, 0, 0.19999999999999996);
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-shrink: 0;
  -webkit-transition: border-bottom 0.2s;
  -moz-transition: border-bottom 0.2s;
}

.glamor-0,
[data-glamor-0] {
  background: transparent;
  border: none;
  flex-grow: 1;
  font-size: 20px;
  height: 24px;
  outline: none;
  -webkit-flex-grow: 1;
}

.glamor-1,
[data-glamor-1] {
  background: none;
  border: none;
  height: 16px;
  width: 16px;
  cursor: pointer;
}

<ComponentListFilter
  onInput={[Function]}
  theme={Object {}}
>
  <glamorous(div)
    focussed={false}
    theme={Object {}}
  >
    <div
      className="glamor-2"
    >
      <glamorous(input)
        id="search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        theme={Object {}}
        value="sport"
      >
        <input
          className="glamor-0"
          id="search-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          value="sport"
        />
      </glamorous(input)>
      <glamorous(button)
        onClick={[Function]}
        pointer={true}
      >
        <button
          className="glamor-1"
          onClick={[Function]}
        >
          <svg
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 3.5L28.5 0 16 12.5 3.5 0 0 3.5 12.5 16 0 28.5 3.5 32 16 19.5 28.5 32l3.5-3.5L19.5 16z"
            />
          </svg>
        </button>
      </glamorous(button)>
    </div>
  </glamorous(div)>
</ComponentListFilter>
`;

exports[`when I focus and type in the filter. the filter has the correct style with input. 1`] = `
.glamor-0,
[data-glamor-0] {
  background: transparent;
  border: none;
  flex-grow: 1;
  font-size: 20px;
  height: 24px;
  outline: none;
  -webkit-flex-grow: 1;
}

.glamor-2,
[data-glamor-2] {
  align-items: center;
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-shrink: 0;
  margin: 8px;
  padding: 4px;
  transition: border-bottom 0.2s;
  border-bottom: solid 2px undefined;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -webkit-flex-shrink: 0;
  -webkit-transition: border-bottom 0.2s;
  -moz-transition: border-bottom 0.2s;
}

.glamor-1,
[data-glamor-1] {
  background: none;
  border: none;
  height: 16px;
  width: 16px;
  cursor: pointer;
}

<ComponentListFilter
  onInput={[Function]}
  theme={Object {}}
>
  <glamorous(div)
    focussed={true}
    theme={Object {}}
  >
    <div
      className="glamor-2"
    >
      <glamorous(input)
        id="search-input"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="Search"
        theme={Object {}}
        value="sport"
      >
        <input
          className="glamor-0"
          id="search-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search"
          value="sport"
        />
      </glamorous(input)>
      <glamorous(button)
        onClick={[Function]}
        pointer={true}
      >
        <button
          className="glamor-1"
          onClick={[Function]}
        >
          <svg
            height="16"
            viewBox="0 0 32 32"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M32 3.5L28.5 0 16 12.5 3.5 0 0 3.5 12.5 16 0 28.5 3.5 32 16 19.5 28.5 32l3.5-3.5L19.5 16z"
            />
          </svg>
        </button>
      </glamorous(button)>
    </div>
  </glamorous(div)>
</ComponentListFilter>
`;
